--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "coffee-script": "^1.10.0",
+    "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "glob": "^7.0.3",
     "js-nacl": "^0.6.0",
     "libsodium": "^0.3.0",
     "libsodium-wrappers": "^0.3.0",
